// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components TicketMessageBody html by default 1`] = `
<TicketMessageBody
  message={
    Object {
      "body_html": "html",
      "body_text": "text",
    }
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <div
    className="component bodyText"
  >
    <div>
      <div
        className=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "html",
          }
        }
      />
    </div>
  </div>
</TicketMessageBody>
`;

exports[`components TicketMessageBody linkify body_text 1`] = `
<TicketMessageBody
  message={
    Object {
      "body_html": "",
      "body_text": "text http://gorgias.io/",
    }
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <div
    className="component"
  >
    <div>
      <div
        className="new-line-interpret"
        dangerouslySetInnerHTML={
          Object {
            "__html": "text <a href=\\"http://gorgias.io/\\" class=\\"linkified\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\">http://gorgias.io/</a>",
          }
        }
      />
    </div>
  </div>
</TicketMessageBody>
`;

exports[`components TicketMessageBody should display the Facebook carousel if there's matching metadata 1`] = `
<TicketMessageBody
  message={
    Object {
      "body_html": "",
      "body_text": "text http://gorgias.io/",
      "meta": Object {
        "facebook_carousel": Array [
          Object {
            "payload": Object {
              "elements": Array [
                Object {
                  "buttons": Array [
                    Object {
                      "title": "View details",
                      "type": "web_url",
                      "url": "https://sfbicycles.myshopify.com/products/fixie-bike",
                      "webview_height_ratio": "tall",
                    },
                    Object {
                      "type": "element_share",
                    },
                    Object {
                      "title": "Buy now",
                      "type": "web_url",
                      "url": "https://messenger-commerce.shopifyapps.com/redirect_to_cart",
                      "webview_height_ratio": "tall",
                    },
                  ],
                  "image_url": "https://cdn.shopify.com/s/files/1/1632/0429/products",
                  "subtitle": "$200.00",
                  "title": "Fixie bike",
                },
              ],
              "sharable": true,
              "template_type": "generic",
            },
            "type": "template",
          },
        ],
      },
    }
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <div
    className="component"
  >
    <div>
      <div
        className="new-line-interpret"
        dangerouslySetInnerHTML={
          Object {
            "__html": "text <a href=\\"http://gorgias.io/\\" class=\\"linkified\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\">http://gorgias.io/</a>",
          }
        }
      />
    </div>
    <FacebookCarousel
      data={
        Array [
          Object {
            "payload": Object {
              "elements": Array [
                Object {
                  "buttons": Array [
                    Object {
                      "title": "View details",
                      "type": "web_url",
                      "url": "https://sfbicycles.myshopify.com/products/fixie-bike",
                      "webview_height_ratio": "tall",
                    },
                    Object {
                      "type": "element_share",
                    },
                    Object {
                      "title": "Buy now",
                      "type": "web_url",
                      "url": "https://messenger-commerce.shopifyapps.com/redirect_to_cart",
                      "webview_height_ratio": "tall",
                    },
                  ],
                  "image_url": "https://cdn.shopify.com/s/files/1/1632/0429/products",
                  "subtitle": "$200.00",
                  "title": "Fixie bike",
                },
              ],
              "sharable": true,
              "template_type": "generic",
            },
            "type": "template",
          },
        ]
      }
    >
      <div
        className="carousel"
      >
        <Slider
          arrows={true}
          infinite={false}
          responsive={
            Array [
              Object {
                "breakpoint": 769,
                "settings": Object {
                  "slidesToShow": 1,
                },
              },
              Object {
                "breakpoint": 1441,
                "settings": Object {
                  "slidesToShow": 2,
                },
              },
            ]
          }
          slidesToShow="3"
        >
          <InnerSlider
            accessibility={true}
            adaptiveHeight={false}
            afterChange={null}
            appendDots={[Function]}
            arrows={true}
            autoplay={false}
            autoplaySpeed={3000}
            beforeChange={null}
            centerMode={false}
            centerPadding="50px"
            className=" unslicked"
            cssEase="ease"
            customPaging={[Function]}
            dots={false}
            dotsClass="slick-dots"
            draggable={true}
            easing="linear"
            edgeEvent={null}
            edgeFriction={0.35}
            fade={false}
            focusOnSelect={false}
            infinite={false}
            init={null}
            initialSlide={0}
            lazyLoad={false}
            nextArrow={null}
            pauseOnHover={true}
            prevArrow={null}
            responsive={
              Array [
                Object {
                  "breakpoint": 769,
                  "settings": Object {
                    "slidesToShow": 1,
                  },
                },
                Object {
                  "breakpoint": 1441,
                  "settings": Object {
                    "slidesToShow": 2,
                  },
                },
              ]
            }
            rtl={false}
            slide="div"
            slidesToScroll={1}
            slidesToShow={1}
            speed={500}
            swipe={true}
            swipeEvent={null}
            swipeToSlide={false}
            touchMove={true}
            touchThreshold={5}
            unslick={true}
            useCSS={true}
            variableWidth={false}
            vertical={false}
            waitForAnimate={true}
          >
            <div
              className="slick-initialized slick-slider  unslicked"
            >
              <div
                className="slick-list"
              >
                <Track
                  centerMode={false}
                  centerPadding="50px"
                  cssEase="ease"
                  currentSlide={0}
                  fade={false}
                  focusOnSelect={null}
                  infinite={false}
                  lazyLoad={false}
                  lazyLoadedList={Array []}
                  listHeight={0}
                  rtl={false}
                  slideCount={1}
                  slideHeight={0}
                  slideWidth={0}
                  slidesToScroll={1}
                  slidesToShow={1}
                  speed={500}
                  trackStyle={
                    Object {
                      "WebkitTransform": "translate3d(0px, 0px, 0px)",
                      "WebkitTransition": "",
                      "msTransform": "translateX(0px)",
                      "opacity": 1,
                      "transform": "translate3d(0px, 0px, 0px)",
                      "transition": "",
                    }
                  }
                  unslick={true}
                  variableWidth={false}
                  vertical={false}
                >
                  <div
                    className="slick-track"
                    style={
                      Object {
                        "WebkitTransform": "translate3d(0px, 0px, 0px)",
                        "WebkitTransition": "",
                        "msTransform": "translateX(0px)",
                        "opacity": 1,
                        "transform": "translate3d(0px, 0px, 0px)",
                        "transition": "",
                      }
                    }
                  >
                    <div
                      className="slick-slide slick-active slick-current carouselCardContainer"
                      data-index={0}
                      onClick={[Function]}
                      style={
                        Object {
                          "outline": "none",
                          "width": 0,
                        }
                      }
                      tabIndex="-1"
                    >
                      <Card
                        className="carouselCard"
                        tag="div"
                      >
                        <div
                          className="carouselCard card"
                        >
                          <CardImg
                            className="carouselImage"
                            src="https://cdn.shopify.com/s/files/1/1632/0429/products"
                            tag="img"
                            top={true}
                            width="100%"
                          >
                            <img
                              className="carouselImage card-img-top"
                              src="https://cdn.shopify.com/s/files/1/1632/0429/products"
                              width="100%"
                            />
                          </CardImg>
                          <CardBody
                            tag="div"
                          >
                            <div
                              className="card-body"
                            >
                              <CardTitle
                                tag="h5"
                              >
                                <h5
                                  className="card-title"
                                >
                                  Fixie bike
                                </h5>
                              </CardTitle>
                              <CardSubtitle
                                tag="h6"
                              >
                                <h6
                                  className="card-subtitle"
                                >
                                  $200.00
                                </h6>
                              </CardSubtitle>
                            </div>
                          </CardBody>
                          <ButtonGroup
                            className="buttons"
                            role="group"
                            tag="div"
                            vertical={true}
                          >
                            <div
                              className="buttons btn-group-vertical"
                              role="group"
                            >
                              <Button
                                color="secondary"
                                href="https://sfbicycles.myshopify.com/products/fixie-bike"
                                tag="a"
                                target="_blank"
                              >
                                <a
                                  className="btn btn-secondary"
                                  href="https://sfbicycles.myshopify.com/products/fixie-bike"
                                  onClick={[Function]}
                                  target="_blank"
                                >
                                  View details
                                </a>
                              </Button>
                              <Button
                                color="secondary"
                                disabled={true}
                                tag="button"
                              >
                                <button
                                  className="btn btn-secondary disabled"
                                  disabled={true}
                                  onClick={[Function]}
                                >
                                  Share
                                </button>
                              </Button>
                              <Button
                                color="secondary"
                                href="https://messenger-commerce.shopifyapps.com/redirect_to_cart"
                                tag="a"
                                target="_blank"
                              >
                                <a
                                  className="btn btn-secondary"
                                  href="https://messenger-commerce.shopifyapps.com/redirect_to_cart"
                                  onClick={[Function]}
                                  target="_blank"
                                >
                                  Buy now
                                </a>
                              </Button>
                            </div>
                          </ButtonGroup>
                        </div>
                      </Card>
                    </div>
                  </div>
                </Track>
              </div>
            </div>
          </InnerSlider>
        </Slider>
      </div>
    </FacebookCarousel>
  </div>
</TicketMessageBody>
`;

exports[`components TicketMessageBody should set new-line-interpret class 1`] = `
<TicketMessageBody
  message={
    Object {
      "body_html": "",
      "body_text": "my test 
    with a new line",
    }
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <div
    className="component"
  >
    <div>
      <div
        className="new-line-interpret"
        dangerouslySetInnerHTML={
          Object {
            "__html": "my test 
          with a new line",
          }
        }
      />
    </div>
  </div>
</TicketMessageBody>
`;

exports[`components TicketMessageBody use stripped_html if available 1`] = `
<TicketMessageBody
  message={
    Object {
      "body_html": "long html",
      "body_text": "text",
      "stripped_html": "stripped html",
      "stripped_text": "stripped text",
    }
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <div
    className="component bodyText"
  >
    <div>
      <div
        className=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "stripped html",
          }
        }
      />
      <Ellipsis
        onClick={[Function]}
        title="Show full content"
      >
        <div
          className="btn-more"
          onClick={[Function]}
          title="Show full content"
        >
          …
        </div>
      </Ellipsis>
    </div>
  </div>
</TicketMessageBody>
`;

exports[`components TicketMessageBody use text when no html 1`] = `
<TicketMessageBody
  message={
    Object {
      "body_html": "",
      "body_text": "text",
    }
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <div
    className="component"
  >
    <div>
      <div
        className="new-line-interpret"
        dangerouslySetInnerHTML={
          Object {
            "__html": "text",
          }
        }
      />
    </div>
  </div>
</TicketMessageBody>
`;

exports[`components TicketMessageBody with empty props 1`] = `
<TicketMessageBody
  message={Object {}}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <div
    className="component"
  >
    <div>
      <div
        className=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
      />
    </div>
  </div>
</TicketMessageBody>
`;
